Update and rename test.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<body></body>
+<!DOCTYPE html>
+<html>
+<body>
 <script>
 function testall(){
   var sizes = [10,100,1000,2000,2025,2050,2100,2250,2500,2750,3000,4000,5000,10000, 50000];
@@ -34,3 +36,6 @@ $( document ).ready(function() {
   testall()
 });
 </script>
+
+  </body>
+</html>
