--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function makestring(n){
     return text;
 }
 
-body.onload = function(){
+document.body.onload = function(){
  testall()
 }
 </script>
