--- a/iframe.html
+++ b/iframe.html
@@ -1,4 +1,2 @@
 <p>hello</p>
-<script>
-  window.location = 'https://duckduckgo.com/'
-</script>
+<a href="#" onclick="top.window.location.href='yourURL';">clickme</a>
