--- a/iframe.html
+++ b/iframe.html
@@ -1,2 +1,2 @@
 <p>hello</p>
-<a href="#" onclick="top.window.location.href='yourURL';">clickme</a>
+<a href="#" onclick="top.window.location.href='https://www.duckduckgo.com';">clickme</a>
